CSS (flip card) - WIP

--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
 
-  <div id="app">
-    <ul id="parkings"></ul>
+  	<div id="container">
+	  	<div id="card">
+	  		<section>
+	    		<ul id="parkings"></ul>
+	    	</section>
+	    	<section>
+	    		<span>pouet</span>
+	    	</section>
+		</div>
   </div>
 
 </body>
