--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	    		<ul id="parkings"></ul>
 	    	</section>
 	    	<section>
-	    		<span>pouet</span>
+	    		<p>pouet</p>
 	    	</section>
 		</div>
   </div>
