card content scrolling

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="fr">
-<head>
+<head>        
+	<meta charset="utf-8">
 	<title>Parking Nantes</title>
 	<link rel="stylesheet" href="css/parkings.css">
-	<script data-main="js/main" src="js/libs/require/2.1.2/require.js"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 </head>
 <body>
-
+	<h1>Parkings à Nantes</h1>
   	<div id="container">
 	  	<div id="card">
 	  		<section>
@@ -16,7 +20,8 @@
 	    		<p>pouet</p>
 	    	</section>
 		</div>
-  </div>
+  	</div>
 
+	<script data-main="js/main" src="js/libs/require/2.1.2/require.js"></script>
 </body>
 </html>
