--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    		<ul id="parkings"></ul>
 	    	</section>
 	    	<section>
-	    		<p>pouet</p>
+	    		<div id="details"></div>
 	    	</section>
 		</div>
   	</div>
